# wiki_rag

./: .env.example  .flake8  .gitignore  GEMINI.md  design_guidelines.md  mcp.json  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
backend/src/api/lambda_handlers/: chat_handler.py  rag_builder_handler.py
backend/src/models/: chat_message.py  query.py  rag_session.py  text_chunk.py
backend/src/services/: chat_service.py  embedding_service.py  llm_service.py  rag_builder.py  vector_store.py  wikipedia_fetcher.py
backend/src/utils/: error_handling.py  s3_client.py  validation.py
docs/: deployment_info.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js
frontend/src/components/: ChatInterface.svelte  EmbeddedChat.svelte  MessageList.svelte  StatusIndicator.svelte  WikipediaInput.svelte
frontend/src/pages/: Chat.svelte  Index.svelte
frontend/src/services/: api_client.js  sse_handler.js
frontend/src/stores/: chat_store.js  session_store.js
infrastructure/: app.py  cdk.context.json  cdk.json
infrastructure/stacks/: compute_stack.py  frontend_stack.py  lambda_stack.py  storage_stack.py
scripts/: mock_api.py  setup_ollama.sh  test_rag_local.py
specs/001-wikipedia-rag-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wikipedia-rag-system/checklists/: requirements.md
specs/001-wikipedia-rag-system/contracts/: chat-api.yaml  rag-builder-api.yaml
